MonetDB/src/mal/Tests/tst150.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2002, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## more complex typechecking, it should not complain at compile time
#command lookup(nme:str):bat[str,str] = CMDlookup;
!ERROR: address of 'CMDlookup' not found
command Admin.lookup(nme:str):bat[str,str] = CMDlookup;	#0:(lookup:bat[str,str])<-(nme:str)
#function sample(nme:str, val:any):bit;
#   b := lookup(nme); #find a bat
#   h := select(b,val,val);
#   t := count(h);
#   x := print(t);
#   y := print(val);
#end function;
function Admin.sample(nme:str,val:any):bit;	#0:(sample:bit)<-(nme:str)(val:any)
	b := Admin.lookup(nme);	#1:(b:bat[str,str])<-(nme:str)
	h := select(b,val,val);	#2 unknown:(h:any)<-(b:bat[str,str])(val:any)(val:any)
	t := count(h);	#3 unknown:(t:any)<-(h:any)
	x := print(t);	#4 unknown:(x:any)<-(t:any)
	y := print(val);	#5 unknown:(y:any)<-(val:any)
end function;	#6:
#
>